--- a/ders/benzer.html
+++ b/ders/benzer.html
@@ -14,7 +14,6 @@
     .column {
         display: inline-block;
         width: 160px;
-        margin: 0 15px;
     }
     button {
         border: 2px solid;
@@ -36,20 +35,20 @@
     <button id=und title="Son satırı geri al">&lt;</button>&ensp;
 </div>
 <pre id=out></pre>
-<p>Burada seçilen 37:76 ayeti, kendisine benzeyen diğer iki ayetle birlikte üçlü bir öbek içinde bulunur. Benzerlik öbeklerinin çoğu ayet çiftleri olmakla birlikte, 40'tan fazla ayet içeren bir öbek de mevcut. 
+Burada seçilen 37:76 ayeti, kendisine benzeyen diğer iki ayetle birlikte üçlü bir öbek içinde bulunur. Benzerlik öbeklerinin çoğu ayet çiftleri olmakla birlikte, 40'tan fazla ayet içeren bir öbek de mevcut. <br>
 <div class=column>
 <p><b>Küçük öbekler:</b> <p>
-    İkili &ensp;  <button class=action>21:7</button><br>
-    Üçlü &ensp;   <button class=action>78:6</button><br>
-    Dörtlü &ensp; <button class=action>17:2</button><br>
-   Dokuzlu &ensp; <button class=action>36:4</button><br>
+    <button class=action>21:7</button>&ensp; İkili <br>
+    <button class=action>16:29</button>&ensp; Üçlü <br>
+    <button class=action>40:53</button>&ensp; Dörtlü <br>
+    <button class=action>36:4</button>&ensp; Dokuzlu <br>
 </div>
 <div class=column>
 <p><b>En büyük öbekler:</b> <p>
-    34'lü &ensp;  <button class=action>2:8</button><br>
-    35'li &ensp;  <button class=action>2:32</button><br>
-    36'lı &ensp;  <button class=action>3:1</button><br>
-    44'lü &ensp;  <button class=action>3:5</button><br>
+    <button class=action>2:33</button>&ensp; 34'lü <br>
+    <button class=action>2:32</button>&ensp; 35'li <br>
+    <button class=action>13:1</button>&ensp; 36'lı <br>
+    <button class=action>11:4</button>&ensp; 44'lü <br>
 </div>
 <h3>Benzerlik ne işe yarar?</h3>
 <ul>
