--- a/index.html
+++ b/index.html
@@ -24,7 +24,10 @@
 </style>
 
 <body>
-<h2>Iqra &ndash; Kitap</h2>
+<h2>Iqra &ndash; Kitap &emsp;<button id=backbutton>◀</button></h2>
+<script>
+  backbutton.onclick = () => {location.pathname = "/Kuran/start.html"}
+</script>
 
 <div class=narrow>
 <h3>Uygulamalar</h3>
