Mesnevi, ilk satır

--- a/KK/korunmus.html
+++ b/KK/korunmus.html
@@ -209,7 +209,7 @@
 <h3 id="korunmamis">Korunmamış bir kitap</h3>
 <p>Bir de korunmamış kitap örneği ile konuyu açıklamak isterim. Aslında, bunun için örnek gerekmez, çünkü tahrif istisna değil kuraldır. İstisna olan korunmuşluk, sadece bir Kitab için geçerli.</p>
 
-<p>Mesnevi’deki tahrifin hikayesi, daha ilk satırda hikaye kelimesiyle başlıyor:
+<!-- <p>Mesnevi’deki tahrifin hikayesi, daha ilk satırda hikaye kelimesiyle başlıyor:
 <figure>
   <img src="./in_ney.png" alt="in ney" />
   <figcaption><a href="https://www.hakanmenguc.org/mesnevinin-ilk-cumlesi-nasil-baslar/" target=Kuran>
@@ -223,10 +223,18 @@
   <figcaption><a href="https://tr.pinterest.com/pin/656470083160033099/" target=Kuran>
   <i>bişnev ez ney çun şikâyet mîkuned</i></a></figcaption>
 </figure>
+</p> -->
+<p>Mesnevi’deki tahrifin hikayesi, daha ilk satırında tesbit ettiğim farklı sürümlerle başlıyor:
+<figure>
+  <img src="./mesnevi ilk satir.jpg" alt="mesnevi ilk satir" />
+  <figcaption>İlk satırın dört farklı sürümü var</figcaption>
+</figure>
 </p>
 
-<p>Değişiklik yalnız bundan ibaret değil. 20 bin beyit içinde, sonradan eklenen, çıkarılan, değiştirilen çok örnek bulunabilir ki hepsi tahrif sayılır. Hemen eklemeliyim, bu zaaf Mesnevi’ye has değil, insan tabiatının bir gereği olarak bütün yazılı metinlerde gözlenebilir. İlahi koruma yoksa her metin tahrife açıktır.</p>
+<p>Değişiklik yalnız bundan ibaret değil. 25 bin beyit içinde, sonradan eklenen, çıkarılan, değiştirilen çok örnek bulunabilir ki hepsi tahrif sayılır. Hemen eklemeliyim, bu zaaf Mesnevi’ye has değil, insan tabiatının bir gereği olarak bütün yazılı metinlerde gözlenebilir. İlahi koruma yoksa her metin tahrife açıktır.</p>
 
+<p>Kuran-ı Kerim korunmasaydı ne olurdu? İşte şu harikulade, insan eseri Mesnevi'de görüldüğü gibi, sayısız farklı sürümleri olurdu! Madem ki Kuran'ın tek sürümü var, o halde hakikaten korunmuştur.
+</p>
 <h3 id="sonuc">8. Sonuç</h3>
 <p>Gustav Flügel 1850'lerde şunu yazmış:
 </p>
