adjust iFrame width

--- a/KK/korunmus.html
+++ b/KK/korunmus.html
@@ -233,11 +233,9 @@
 
 <p>Değişiklik yalnız bundan ibaret değil. 25 bin beyit içinde, sonradan eklenen, çıkarılan, değiştirilen çok örnek bulunabilir ki hepsi tahrif sayılır. Hemen eklemeliyim, bu zaaf Mesnevi’ye has değil, insan tabiatının bir gereği olarak bütün yazılı metinlerde gözlenebilir. İlahi koruma yoksa her metin tahrife açıktır.</p>
 
-<p>Kuran-ı Kerim korunmasaydı ne olurdu? İşte şu harikulade, insan eseri Mesnevi'de görüldüğü gibi, sayısız farklı sürümleri olurdu! Madem ki Kuran'ın tek sürümü var, o halde hakikaten korunmuştur.
-</p>
 <h3 id="sonuc">8. Sonuç</h3>
-<p>Gustav Flügel 1850'lerde şunu yazmış:
-</p>
+<p>Kuran-ı Kerim korunmasaydı ne olurdu? İşte şu harikulade, insan eseri Mesnevi'de görüldüğü gibi, sayısız farklı sürümleri olurdu! Madem ki Kuran'ın tek sürümü var, o halde hakikaten korunmuştur.</p>
+<p>Gustav Flügel 1850'lerde şunu yazmış:</p>
 <blockquote class=it>
 “... the genius of the entire Arabic Language, as found in the
 writings from the time of Mohammed onwards, has been so
@@ -253,7 +251,7 @@ haline gelmiştir.
 </blockquote>
 <p>Başka bir deyişle, "Kuran gramere uygun mu?" diye sorulmaz, gramer kuralları Kuran'a göre ayarlanır.</p>
 <br>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/-yQ-CEKOYzU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe src="https://www.youtube.com/embed/-yQ-CEKOYzU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 <h3 id="referans">Referans</h3>
 <p>Mu’cem konusunda yaptığım ilk sunum: <a href="https://maeyler.github.io/Sunumlar/docs/Words%20in%20Quran.pdf" target=Kuran>Konya, Ekim 2015</a>
