--- a/cuma/index.html
+++ b/cuma/index.html
@@ -56,6 +56,7 @@ href="https://www.youtube.com/playlist?list=PLBDiqooDrrutgeVuWmpz5619chQnpOGcA">
   <li><a href="geylani.html">Abdulqadir Geylani</a>
   <li><a href="quest.html">Self-Knowledge (Zaman)</a>
   <li><a href="inanc.html">Allah inancı (Çağrıcı)</a>
+  <li><a href="hadis.html">Kuran'da hadis (E Türe)</a>
   <li><a href="iktibas.html">Şiirde iktibas sanatı</a>
 </ul>
 </div>
