--- a/cuma/hadis.html
+++ b/cuma/hadis.html
@@ -11,8 +11,9 @@
 <body>
 <p class=it>Kur’an’da “hadis” kelimesinin geçtiği bazı ayetleri aşağıda bulacaksınız. Renkli ayet metnine dokununca, Iqra yazılımı içinde ayetin aslını görebilirsiniz. Bu ayetlerin mealinde, azınlık sayılacak bazı alimler söz konusu kelimeyi tercüme etmeden kullanırken, diğerleri söz / laf / lakırdı / efsane gibi karşılıklar kullanmış. Mealleri toplu olarak görmek için Iqra yazılımı içinde ayetin numarasına sağ tıklayın ya da basılı tutun, 
   <span style="font-style:normal">kuranmeali.com</span>   
-sitesi açılacaktır.</p>
-<br>
+sitesi açılacaktır. 
+<p>Ayetlerin seçimi: Erkan Türe</p>
+
 <h2>Uydurulmuş bir hadis değil</h2>
 <div class="pre">Sözlükte “söz, olay” anlamına gelen “hadis”  kelimesi Yüce Kitabımızda 28 kere geçiyor. Bunların bazılarında bizzat “Kur’an” anlamında kullanılmış:
 
