--- a/cuma/hadis.html
+++ b/cuma/hadis.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
 <meta charset="UTF-8">
 <meta name="viewport"    content="width=device-width">
-<meta name="author"      content="M A Eyler, Istanbul, 2021" />
+<meta name="author"      content="M A Eyler, Istanbul, 2024" />
 <meta name="description" content="Words from Quran" />
 <link rel="stylesheet" href="cuma.css" media="all">
 <link rel="icon" href="/Kuran/image/icon.png">
@@ -51,7 +51,7 @@ Lehve’l-hadîs, “söz/hadis oyunu” demektir. Muhatabı yanıltma ve Kur’
 Zımnen: İnsanların bilgi açlığını kelime oyunları, laf cambazlıkları ya da keyif ve eğlence verici sözlerle bastırmaya kalkarak sözü bir uyuşturucu gibi kullanırlar.<br>
 Kur’an’a yeni bir âyet ilave edemeyenlerin, “hadis” adı altında Allah Rasûlü’ne isnatla uydurdukları sözler de bu âyetin kapsamına girer. Bu durumda Kur’an’ın “hadis oyunu” (lehve’l-hadis) ifadesi, mucizevî bir ihbar hüviyeti kazanır. Kur’an, içine indiği toplumun aklını “karanlık” ilan etmiş ve kendi hedefini “karanlıklardan aydınlığa çıkarmak” olarak belirlemiştir. Cahiliyye Arap geleneğini oluşturan bir çok inanç ve kültür, Kur’an’ın “karanlık” ilan ettiği aklın ürünüydü. Lehve’l-hadîs, Kur’an vahyi ile saf dışı bırakılan geleneksel cahiliyye itikadını İslam kültürüne dahil etme yönteminin de adı oldu. Kur’an’a açıktan itiraz edemeyenler, itirazlarını lehve’l-hadîs üzerinden yaptılar ve onu Kur’an’ın ortağı ilan ettiler. Bu “hadis oyunu”ndan en büyük zararı, Allah Rasûlü’nün mubarek ağzından dökülen ve asla sünnetullah ve Kur’an ile çelişmesi düşünülemeyecek olan gerçek ‘hadisler’ ve Kur’an’ın “örnek” gösterdiği davranışlar gördü.
 </blockquote>
-<p>Dersler 
+<p>Cuma dersleri
     <button class=goBack>◀</button>
 </p>
 <script src="/Kitap/ders/init.js"></script>
