--- a/cuma/index.html
+++ b/cuma/index.html
@@ -54,8 +54,9 @@ href="https://www.youtube.com/playlist?list=PLBDiqooDrrutgeVuWmpz5619chQnpOGcA">
 <ul>
   <li><a href="adalet.html">Adalet ve ibadet</a>
   <li><a href="geylani.html">Abdulqadir Geylani</a>
-  <li><a href="quest.html">Self-Knowledge (Zaman)</a>
-  <li><a href="inanc.html">Allah inancı (Çağrıcı)</a>
+  <li><a href="quest.html">Self-Knowledge (A Zaman)</a>
+  <li><a href="inanc.html">Allah inancı (M Çağrıcı)</a>
+  <li><a href="hesap.html">Hesap Günü (N Yıldız)</a>
   <li><a href="hadis.html">Kuran'da hadis (E Türe)</a>
   <li><a href="sozler.html">Sözün gücü (İ Gürol)</a>
   <li><a href="iktibas.html">Şiirde iktibas sanatı</a>
