--- a/cuma/index.html
+++ b/cuma/index.html
@@ -52,14 +52,14 @@ href="https://www.youtube.com/playlist?list=PLBDiqooDrrutgeVuWmpz5619chQnpOGcA">
 <h3>Alıntılar</h3>
 <p>Muhtelif yazarlardan örnek alıntılar</p>
 <ul>
-  <li><a href="adalet.html">Adalet ve ibadet</a>
-  <li><a href="geylani.html">Abdulqadir Geylani</a>
-  <li><a href="quest.html">Self-Knowledge (A Zaman)</a>
-  <li><a href="inanc.html">Allah inancı (M Çağrıcı)</a>
-  <li><a href="hesap.html">Hesap Günü (N Yıldız)</a>
-  <li><a href="hadis.html">Kuran'da hadis (E Türe)</a>
-  <li><a href="sozler.html">Sözün gücü (İ Gürol)</a>
+  <li><a href="adalet.html">Adalet ve ibadet (Karabaşoğlu)</a>
+  <li><a href="geylani.html">The First Letter (A Geylani)</a>
+  <li><a href="quest.html">Self-Knowledge (Asad Zaman)</a>
   <li><a href="iktibas.html">Şiirde iktibas sanatı</a>
+  <li><a href="inanc.html">Allah inancı (Mustafa Çağrıcı)</a>
+  <li><a href="sozler.html">Sözün gücü (İsmail Gürol)</a>
+  <li><a href="hesap.html">Hesap Günü (Nureddin Yıldız)</a>
+  <li><a href="hadis.html">Kuran'da hadis (Erkan Türe)</a>
 </ul>
 </div>
 
