--- a/cuma/sozler.html
+++ b/cuma/sozler.html
@@ -10,7 +10,7 @@
 
 <body>
 <p class=it>Kitabımızda “kavl” kelimesinin geçtiği bazı ayetleri aşağıda bulacaksınız. Renkli ayet metnine dokununca, Iqra yazılımı içinde ayetin aslını görebilirsiniz.</p>
-<p>Ayetlerin seçimi: İsmail Gürol</p>
+<p>Ayetlerin seçimi: İsmail Gürol, 28 Mart 2024</p>
 
 <h2>Sözümüz nasıl olmalı?</h2>
 <div class="pre">Sözlükte “söz” anlamına gelen “kavl”  kelimesi Yüce Kitabımızda 92 kere geçiyor. Bunların bazıları bizim için davranış modeli:
