--- a/cuma/hesap.html
+++ b/cuma/hesap.html
@@ -12,6 +12,7 @@
 <p class=it>Nureddin Yıldız'ın ilginç bir sunumu</p>
 
 <h3>Hesap Gününün yedi gerçeği</h3>
+4 Nisan 2024
 <iframe width="560" height="315" src="https://youtube.com/embed/UQyVHNhSxbk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 <div class=pre>
 1. Mutlak adalet
