--- a/cuma/index.html
+++ b/cuma/index.html
@@ -36,6 +36,7 @@
   <li><a href="rabler.html">Allah bir, rabler çok</a>
   <li><a href="salat.html">Salât nedir?</a>
   <li><a href="feryad.html">Enbiyanın Feryadı</a>
+  <li><a href="enbiya.html">Enbiyanın Sözleri</a>
   <li><a href="medine.html">Medine Dönemi</a>
   <li><a href="hacc.html">Rahman'ın Konukları</a>
   <li><a href="kurban.html">Kurban Yakınlıktır</a>
