--- a/cuma/index.html
+++ b/cuma/index.html
@@ -61,6 +61,7 @@ href="https://www.youtube.com/playlist?list=PLBDiqooDrrutgeVuWmpz5619chQnpOGcA">
   <li><a href="sozler.html">Sözün gücü (İsmail Gürol)</a>
   <li><a href="hesap.html">Hesap Günü (Nureddin Yıldız)</a>
   <li><a href="hadis.html">Kuran'da hadis (Erkan Türe)</a>
+  <li><a href="bereket.html">Bereket kaynağı (Havva Demir)</a>
 </ul>
 </div>
 
