--- a/cuma/enbiya.html
+++ b/cuma/enbiya.html
@@ -137,7 +137,7 @@
     </details>
 </details></div>
 <br>
-<div>Kekeme bir çoban, kendini tanrı sayan bir krala gönderilmiş
+<div>Kekeme bir çoban ve kendini tanrı sayan bir kral
 <details>
     <summary class="verse">rabbi-şrah lî sadrî veyessir lî emrî</summary>
     <details>
@@ -146,7 +146,7 @@
     </details>
 </details></div>
 <br>
-<div>Arkasında bir ordu, önünde karanlık deniz
+<div>Bir ordudan kaçarken, önünde karanlık deniz
 <details>
     <summary class="verse">kellâ inne ma’iye rabbî seyehdîn</summary>
     <details>
@@ -167,15 +167,15 @@
 <div>Nimetleri göndereni hatırlamak
 <details>
     <summary class="verse">hâżâ min fadli rabbî</summary>
+    <img src="/Kitap/rama/minfadliRabbi.jpg" width=340>
+    <div class="center">
+        <a href="http://www.ozcay.com/mehmed/galeri#94" target="Kuran">Mehmed Özçay</a> 
+    </div>
     <details>
         <summary>Hz Süleyman &emsp; <a name="v=27:40">27:40</a></summary>
         <span class="trans">Şüphesiz ki bu, Rabbimin lütfundandır</span>
     </details>
 </details></div>
-<img src="/Kitap/rama/minfadliRabbi.jpg" width=340>
-<div class="center">
-    <a href="http://www.ozcay.com/mehmed/galeri#94" target="Kuran">Mehmed Özçay</a> 
-</div>
 <br>
 <div>Nimetleri neden severiz?
 <details>
@@ -231,7 +231,7 @@
     </details>
 </details></div>
 <br>
-<div>"Rabbin gökten bir sofra indirebilir mi?" sorusuna cevap
+<div>"Rabbin bir sofra indirebilir mi?" sorusuna cevap
 <details>
     <summary class="verse">allâhumme rabbenâ enzil ‘aleynâ mâideten mines-semâ</summary>
     <details>
@@ -243,6 +243,7 @@
 <div>Mağarada iki kişi, biri diğerini teskin ediyor
 <details>
     <summary class="verse">lâ tahzen innallâhe ma’anâ</summary>
+    <img src="https://i.pinimg.com/originals/a4/aa/6d/a4aa6d2defba2dec0ccd97b3e6856702.jpg" width=340>
     <details>
         <summary>Hz Muhammed &emsp; <a name="v=9:40">9:40</a></summary>
         <span class="trans">Üzülme, şüphesiz ki Allah bizimledir</span>
@@ -259,12 +260,12 @@
 </details></div>
 <br><br>
 <p>Cuma Dersleri <button class=goBack>◀</button> &emsp;
-    <button onclick="openAll()">Aç</button> 
+    <button onclick="openAll()">Hepsini Aç</button>
+
 <!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/Ha3I-TbtfOU" 
   title="YouTube video player" frameborder="0"  allowfullscreen
   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture">
 </iframe> -->
-
 
 <script>
 "use strict";
@@ -278,11 +279,6 @@ function shuffle(data) { //not used
 function openAll() {
     document.body.querySelectorAll("details").forEach(x=>x.open=1)
 }
-function goBack() {
-    location.pathname = "/Kitap/cuma/"
-}
-for (let b of document.querySelectorAll('.goBack'))
-    b.onclick = goBack
 </script>
 
 <script src="/Kitap/ders/init.js"></script>
