--- a/cuma/bereket.html
+++ b/cuma/bereket.html
@@ -8,6 +8,13 @@
 <link rel="icon" href="/Kuran/image/icon.png">
 <title>Bereket nelere bağlıdır?</title>
 
+<style>
+    a b {
+        font-weight: normal;
+        background: yellow;
+    }
+</style>
+
 <body>
 <p class=it>Kur’an’da “BRK” kökünden türetilen kelimelerin geçtiği bazı ayetleri aşağıda bulacaksınız. Renkli ayet mealine dokununca, Iqra yazılımı içinde ayetin aslını görebilirsiniz. Mealleri toplu olarak görmek için Iqra yazılımı içinde ayetin numarasına sağ tıklayın ya da basılı tutun, 
   <span style="font-style:normal">kuranmeali.com</span>   
@@ -18,34 +25,36 @@ sitesi açılacaktır.
 <div class="pre">Sözlükte “bir şeyde ilâhî hayrın devamı” anlamına gelen “bereket” ve “mubarek”  kelimeleri Yüce Kitabımızda 32 kere geçiyor.
 
 A'râf  Suresi (7:137) İsrailoğullarına miras kalan bereket, "Sabırlarına karşılık" verilmiş.
-<a name="v=7:137&r=brk">Zayıf düşürülmüş olan o toplumu, bereketli kıldığımız yerin doğu ve batı taraflarına mirasçı kılmıştık. <b>Sabırlarına karşılık</b> Rabbinin İsrailoğullarına verdiği güzel söz yerine gelmişti. Firavun ve kavminin yaptıkları (eserlerini) ve yükselttiklerini (çardaklarını, binalarını) yerle bir etmiştik.</a>
+<a name="v=7:137&r=brk">Zayıf düşürülmüş olan o toplumu, <b>bereketli kıldığımız</b> yerin doğu ve batı taraflarına mirasçı kılmıştık. <b>Sabırlarına karşılık</b> Rabbinin İsrailoğullarına verdiği güzel söz yerine gelmişti. Firavun ve kavminin yaptıkları (eserlerini) ve yükselttiklerini (çardaklarını, binalarını) yerle bir etmiştik.</a>
 
 Hud Suresi (11:73) Melekler Sare'ye doğum müjdesi verince çok şaşırmıştı. Sonraki ayetlerde bereketin kaynağını, Hz İbrahim'in "içli, yumuşak huylu ve kendisini Allah'a veren" karakteri olarak okuyoruz.
-<a name="v=11:73&r=brk">"Ey evin hanımı! Allah'ın rahmeti ve bereketleri üzerinize olmuşken, nasıl Allah'ın işine şaşarsın? O, övülmeye layıktır, yücelerin yücesidir" dediler.</a>
+<a name="v=11:73&r=brk">"Ey evin hanımı! Allah'ın <b>rahmeti ve bereketleri</b> üzerinize olmuşken, nasıl Allah'ın işine şaşarsın? O, övülmeye layıktır, yücelerin yücesidir" dediler.</a>
 
-Bakara Suresi (2:276) Önceki ayette geçen "Allah, alışverişi helal, faizi de haram kılmıştır" hükmü ile, artış gibi görünen ribanın aslında malı mahvettiğini anlıyoruz.
-<a name="v=2:276&r=rbw"> Allah faizi mahveder, oysa sadakaları bereketlendirir. Allah günahta ve inkârda direnen hiç kimseyi sevmez.</a>
+Bakara Suresi (2:276) Önceki ayette geçen "Allah, alışverişi helal, faizi de haram kılmıştır" hükmü ile, artış gibi görünen faizin aslında malı mahvettiğini ve bereketi bozduğunu anlıyoruz.
+<a name="v=2:276&r=rbw"> Allah faizi mahveder, oysa sadakaları <b>bereketlendirir</b>. Allah günahta ve inkârda direnen hiç kimseyi sevmez.</a>
 
-Sebe Suresi (34:15) "Beldetun tayyibe" (güzel bir belde) olarak nitelenen bereketli yer, nankörlüklerinin cezası olarak mahvedilmiş.
-<a name="v=34:15&r=bld&r=Tyb">Andolsun ki Sebe kavmi için oturdukları yerde bir ibret vardı: Sağ ve soldan iki bahçe! Rabbinizin rızkından yiyin de O'na şükredin, ne güzel bir belde ve çok bağışlayıcı bir Rab!</a>
+Sebe Suresi (34:15) "Beldetun tayyibe" (güzel bir belde) olarak nitelenen bereketli yer, nankörlüklerinin cezası olarak harap edilmiş.
+<a name="v=34:15&r=bld&r=Tyb">Andolsun ki Sebe kavmi için oturdukları yerde bir ibret vardı: Sağ ve soldan iki bahçe! Rabbinizin rızkından yiyin de <b>O'na şükredin</b>, ne güzel bir belde ve çok bağışlayıcı bir Rab!</a>
 
-Saffat Suresi (37:113) Sayfanın başında Hz İbrahim ve oğlu İsmail söz konusuydu. Bu ayette diğer oğlu İshak bereket konusu oluyor.
-<a name="v=37:113&r=brk">Hem ona hem İshak'a bereketler verdik. İkisinin neslinden, hem iyilik yapanlar hem de açıkça kendi nefsine zulmedenler var.</a>
+Saffat Suresi (37:113) Sayfanın başında Hz İbrahim'in oğlu İsmail kurban konusuydu. Bu ayette diğer oğlu İshak bereket konusu oluyor. Bereketin Allah tarafından verildiğini, görünen bir sebep olmadan da verilebileceğini anlıyoruz.
+<a name="v=37:113&r=brk">Hem ona hem İshak'a <b>bereketler</b> verdik. İkisinin neslinden, hem iyilik yapanlar hem de açıkça kendi nefsine zulmedenler var.</a>
 
-Kaf Suresi (50:9) Önceki ayet, bereketin sebebini "Allah'a yönelen her kula gönül gözünü açmak ve ona ibret vermek" olarak belirlemiş.
-<a name="v=50:9&r=brk">Bir de gökten bereketli bir su indirip de onunla bağlar, bahçeler ve biçilecek taneler bitirmekteyiz.</a>
+Kaf Suresi (50:9) Bundan önceki ayet, bereketin sebebini "Allah'a yönelen her kula gönül gözünü açmak ve ona ibret vermek" olarak belirlemiş.
+<a name="v=50:9&r=brk">Bir de gökten <b>bereketli bir su</b> indirip de onunla bağlar, bahçeler ve biçilecek taneler bitirmekteyiz.</a>
 
-Fussilet Suresi (41:10) Dağlar da bereket kaynağı.
-<a name="v=41:10&r=brk">O, yerin üstünde sabit dağlar yarattı. Orada bereketler meydana getirdi. Orada araştırıp soranlar için rızıkları tam dört günde belli bir seviyede takdir edip, düzene koydu.</a>
+Fussilet Suresi (41:10) Dağlar da bereket kaynağı olduğuna göre, bereketi tamamen Allah vergisi olarak nitelendiriyoruz.
+<a name="v=41:10&r=brk">O, yerin üstünde sabit dağlar yarattı. Orada <b>bereketler</b> meydana getirdi. Orada araştırıp soranlar için rızıkları tam dört günde belli bir seviyede takdir edip, düzene koydu.</a>
 
-Rum Suresi (30:39) Yukarıda geçen faiz ayetine benziyor: Riba artmaz, asıl artan zekat ve sadakadır.
-<a name="v=30:39&r=rbw">İnsanların malları içinde artsın diye verdiğiniz faiz, Allah yanında artmaz. Allah'ın rızasını dileyerek verdiğiniz zekata gelince, işte onlar, malları kat kat artmış olanlardır.</a>
+Rum Suresi (30:39) Yukarıda geçen faiz ayetine benziyor: Riba (faiz) artmaz, asıl artan zekat ve sadakadır. Yani, zekat malın bereketini artırıyor.
+<a name="v=30:39&r=rbw">İnsanların malları içinde artsın diye verdiğiniz faiz, Allah yanında artmaz. Allah'ın rızasını dileyerek verdiğiniz zekata gelince, işte onlar, malları <b>kat kat artmış</b> olanlardır.</a>
 
-Hud Suresi (11:52) Sureye adını veren peygamberin dilinden bir tavsiye.
-<a name="v=11:52&r=drr">"Ey kavmim! Rabbinizden mağfiret isteyin, sonra O'na tevbe edin ki, üzerinize gökten bol bol bereket indirsin ve sizi kuvvetinize kuvvet katarak çoğaltsın. Gelin günahkâr olarak dönüp gitmeyin."</a>
+Hud Suresi (11:52) Sureye adını veren peygamberin dilinden herkes için geçerli bir tavsiye.İstigfar ve tevbe açıkça berekete sebep oluyor. (Bu ayette "bereket" anlamına gelen kelime <b>midrâr</b>)
+<a name="v=11:52&r=drr">"Ey kavmim! Rabbinizden <b>mağfiret</b> isteyin, sonra O'na <b>tevbe</b> edin ki, üzerinize gökten bol bol <b>bereket</b> indirsin ve sizi kuvvetinize kuvvet katarak çoğaltsın. Gelin günahkâr olarak dönüp gitmeyin."</a>
 
 </div>
-
+<p>Allah iyi ahlak (yumuşak huylu, sabırlı, ...) durumlarında veya sebepsizce bir kişiye veya bir yere bereket verebiliyor. Ancak, bereket Allah'ın hediyesi olarak fark edilip şükredilmezse; ya da Allah'ın vaadine inanmayıp faiz gibi meşru olmayan yollara başvurulursa elden alınan bir özellik olarak görüyoruz.
+</p>
+<br>
 <p>Cuma dersleri
     <button class=goBack>◀</button>
 </p>
