--- a/cuma/bereket.html
+++ b/cuma/bereket.html
@@ -16,10 +16,10 @@
 </style>
 
 <body>
-<p class=it>Kur’an’da “BRK” kökünden türetilen kelimelerin geçtiği bazı ayetleri aşağıda bulacaksınız. Renkli ayet mealine dokununca, Iqra yazılımı içinde ayetin aslını görebilirsiniz. Mealleri toplu olarak görmek için Iqra yazılımı içinde ayetin numarasına sağ tıklayın ya da basılı tutun, 
+<p class=it>Kur’an’da “BRK” kökünden türetilen kelimelerin geçtiği bazı ayetleri aşağıda bulacaksınız. Renkli ayet mealine dokununca, Iqra yazılımı içinde ayetin aslını görebilirsiniz. Mealleri toplu olarak görmek için Iqra yazılımı içinde ayetin numarasına sağ tıklayın ya da basılı tutun, açılan menüden
   <span style="font-style:normal">kuranmeali.com</span>   
-sitesi açılacaktır. 
-<p>Ayetlerin seçimi: Havva demir, 24 Mayıs 2024</p>
+sitesini seçin. 
+<p>Havva demir, 24 Mayıs 2024</p>
 
 <h2>Bereket nelere bağlıdır?</h2>
 <div class="pre">Sözlükte “bir şeyde ilâhî hayrın devamı” anlamına gelen “bereket” ve “mubarek”  kelimeleri Yüce Kitabımızda 32 kere geçiyor.
@@ -48,7 +48,7 @@ Fussilet Suresi (41:10) Dağlar da bereket kaynağı olduğuna göre, bereketi t
 Rum Suresi (30:39) Yukarıda geçen faiz ayetine benziyor: Riba (faiz) artmaz, asıl artan zekat ve sadakadır. Yani, zekat malın bereketini artırıyor.
 <a name="v=30:39&r=rbw">İnsanların malları içinde artsın diye verdiğiniz faiz, Allah yanında artmaz. Allah'ın rızasını dileyerek verdiğiniz zekata gelince, işte onlar, malları <b>kat kat artmış</b> olanlardır.</a>
 
-Hud Suresi (11:52) Sureye adını veren peygamberin dilinden herkes için geçerli bir tavsiye.İstigfar ve tevbe açıkça berekete sebep oluyor. (Bu ayette "bereket" anlamına gelen kelime <b>midrâr</b>)
+Hud Suresi (11:52) Sureye adını veren peygamberin dilinden herkes için geçerli bir tavsiye. İstigfar ve tevbe açıkça berekete sebep oluyor. (Bu ayette "bereket" anlamına gelen kelime <b>midrâr</b>)
 <a name="v=11:52&r=drr">"Ey kavmim! Rabbinizden <b>mağfiret</b> isteyin, sonra O'na <b>tevbe</b> edin ki, üzerinize gökten bol bol <b>bereket</b> indirsin ve sizi kuvvetinize kuvvet katarak çoğaltsın. Gelin günahkâr olarak dönüp gitmeyin."</a>
 
 </div>
