button to mix data

--- a/cuma/enbiya.html
+++ b/cuma/enbiya.html
@@ -8,6 +8,9 @@
 <title>Enbiyanın Sözleri</title>
 
 <style>
+  #main > div {
+    margin-bottom: 1em;
+  }
   details {
     font-family: Georgia, Times, serif;
     margin: 0 1em;
@@ -23,12 +26,13 @@
   }
 </style>
 
-<h2>Enbiyanın Sözleri &emsp; <button class=goBack>◀</button></h2>
+<h2>Enbiyanın Sözleri &emsp;<button onclick="mixData()">Karıştır</button></h2>
 
 <p>Büyük insanların sözleri de büyük olur. Aşağıda verilen ipuçlarını kullanarak, Kitabımızda adı geçen bazı nebilerin önemli sözlerini hatırlayalım. Bildiğimiz kadarı ile, sözleri tarih sırasında sunuyorum.
 </p>
 <p>Bunların çoğunda, ilgili peygamber dua makamında Rabbine yalvarıyor, diğerlerinde etrafındakilere sesleniyor. Ayete dokununca ilk seviye açılır, sözün sahibi ve mushaftaki yeri görünür. Peygamberin adına dokununca ayetin meali açılır.
 </p>
+<div id=main>
 <div>Arafat'ta pişmanlıkla tevbe eden iki kişi
 <details>
     <summary class="verse">rabbenâ zalemnâ enfusenâ</summary>
@@ -37,8 +41,7 @@
         <span class="trans">Rabbimiz, biz kendimize zulmettik</span>
     </details>
 </details></div>
-<br>
-<div>Yıllarca uğraştıktan sonra "Yenildim" diyen nebinin bedduası
+<div>Asırlarca uğraştıktan sonra "Yenildim" diyen nebi
 <details>
     <summary class="verse">rabbi lâ teżer ‘alel-ardi minel-kâfirîne deyyârâ</summary>
     <details>
@@ -46,7 +49,6 @@
         <span class="trans">Rabbim, yeryüzünde inkârcılardan hiç kimseyi bırakma</span>
     </details>
 </details></div>
-<br>
 <div>Bir taşıta binerken söylenir
 <details>
     <summary class="verse">irkebû fîhâ bismillâhi mecrâhâ vemursâhâ</summary>
@@ -55,7 +57,6 @@
         <span class="trans">Gemiye binin, yüzdüren ve durduran Allah’ın adıyla</span>
     </details>
 </details></div>
-<br>
 <div>Büyük bir işi tamamlayanların duası
 <details>
     <summary class="verse">rabbenâ tekabbel minnâ inneke entes-semî’ul-’alîm</summary>
@@ -64,7 +65,6 @@
         <span class="trans">Rabbimiz, bunu kabul et; Sensin her şeyi bilen, her şeyi duyan</span>
     </details>
 </details></div>
-<br>
 <div>Bir nebi kendisi için dua ediyor
 <details>
     <summary class="verse">rabbi heb lî hukmen veelhiknî bis-sâlihîn</summary>
@@ -73,7 +73,6 @@
         <span class="trans">Rabbim, bana hikmet ver, beni salihler arasına kat</span>
     </details>
 </details></div>
-<br>
 <div>Kendisi için ve neslinden gelenler için
 <details>
     <summary class="verse">rabbi-c’alnî mukîmes-salâti vemin żurriyyetî</summary>
@@ -82,7 +81,6 @@
         <span class="trans">Rabbim, beni ve soyumdan gelenleri salâtta devamlı kıl</span>
     </details>
 </details></div>
-<br>
 <div>Olağan dışı bir görev, çocuğun babasına tavsiyesi
 <details>
     <summary class="verse">yâ ebeti-f’al mâ tu-mer</summary>
@@ -91,7 +89,6 @@
         <span class="trans">Babacığım, sana emredileni yap</span>
     </details>
 </details></div>
-<br>
 <div>Kimi kime şikayet edelim?
 <details>
     <summary class="verse">innemâ eşkû beśśî vehuznî ilallâh</summary>
@@ -100,7 +97,6 @@
         <span class="trans">Ben hüznümü, kederimi ancak Allah'a şikayet ederim</span>
     </details>
 </details></div>
-<br>
 <div>Zor sınavda kime sığınalım?
 <details>
     <summary class="verse">ma’âżallâh, innehu rabbî ahsene meśvây</summary>
@@ -109,7 +105,6 @@
         <span class="trans">Allah’a sığınırım, O benim Rabbim, bana iyi baktı</span>
     </details>
 </details></div>
-<br>
 <div>Peygamberler de sınavda, onların da nefsi var
 <details>
     <summary class="verse">vemâ uberriu nefsî innen-nefse leemmâratun bis-sû</summary>
@@ -118,7 +113,6 @@
         <span class="trans">Nefsimi temize çıkarmıyorum, nefis kötülüğü emreder</span>
     </details>
 </details></div>
-<br>
 <div>İnsanın kendisi için yapacağı en güzel dua
 <details>
     <summary class="verse">teveffenî muslimen veelhiknî bis-sâlihîn</summary>
@@ -127,7 +121,6 @@
         <span class="trans">Canımı müslüman olarak al ve beni salihler arasına kat</span>
     </details>
 </details></div>
-<br>
 <div>Bir ağacın gölgesinde "bittim" nidası
 <details>
     <summary class="verse">rabbi innî limâ enzelte ileyye min ḣayrin fakîr</summary>
@@ -136,7 +129,6 @@
         <span class="trans">Rabbim, bana indireceğin her hayra muhtacım</span>
     </details>
 </details></div>
-<br>
 <div>Kekeme bir çoban ve kendini tanrı sayan bir kral
 <details>
     <summary class="verse">rabbi-şrah lî sadrî veyessir lî emrî</summary>
@@ -145,8 +137,7 @@
         <span class="trans">Rabbim, göğsüme genişlik ver, işimi kolaylaştır</span>
     </details>
 </details></div>
-<br>
-<div>Bir ordudan kaçarken, önünde karanlık deniz
+<div>Arkasında bir ordu, önünde karanlık deniz
 <details>
     <summary class="verse">kellâ inne ma’iye rabbî seyehdîn</summary>
     <details>
@@ -154,7 +145,6 @@
         <span class="trans">Hayır, Rabbim benimledir, bana yol gösterecektir</span>
     </details>
 </details></div>
-<br>
 <div>Nimetlerin sonucu hamd olmalı
 <details>
     <summary class="verse">el-hamdu lillâhi-lleżî faddalenâ ‘alâ keśîrin min ‘ibâdihil-mu-minîn</summary>
@@ -163,7 +153,6 @@
         <span class="trans">Bizi mümin kullarının çoğundan üstün kılan Allah'a hamd olsun</span>
     </details>
 </details></div>
-<br>  
 <div>Nimetleri göndereni hatırlamak
 <details>
     <summary class="verse">hâżâ min fadli rabbî</summary>
@@ -176,7 +165,6 @@
         <span class="trans">Şüphesiz ki bu, Rabbimin lütfundandır</span>
     </details>
 </details></div>
-<br>
 <div>Nimetleri neden severiz?
 <details>
     <summary class="verse">innî ahbebtu hubbe-lḣayri ‘an żikri rabbî</summary>
@@ -185,7 +173,6 @@
         <span class="trans">Rabbimi hatırlatmaları nedeniyle iyi şeylerden hoşlanırım</span>
     </details>
 </details></div>
-<br>
 <div>Daha önce kimsenin yapmadığı bir zenginlik duası
 <details>
     <summary class="verse">rabbi-ġfir lî veheb lî mulken lâ yenbeġî liahadin min ba’dî</summary>
@@ -194,7 +181,6 @@
         <span class="trans">Rabbim, beni bağışla, benden sonra kimsenin ulaşamayacağı bir mülk ver</span>
     </details>
 </details></div>
-<br>
 <div>En zorlu dertler içinde bile şikayet yok
 <details>
     <summary class="verse">innî messeniyed-durru veente erhamur-râhimîn</summary>
@@ -203,7 +189,6 @@
         <span class="trans">Başıma bu dert geldi, sen merhametlilerin en merhametlisisin</span>
     </details>
 </details></div>
-<br>
 <div>Karanlıklar içinde pişmanlık sözleri
 <details>
     <summary class="verse">lâ ilâhe illâ ente subhâneke innî kuntu minez-zâlimîn</summary>
@@ -212,7 +197,6 @@
         <span class="trans">Senden başka tanrı yok, subhâneke, gerçekten haksızlık yaptım</span>
     </details>
 </details></div>
-<br>
 <div>Yaşlanmış bir nebi çocuk sahibi olmak istiyor
 <details>
     <summary class="verse">rabbi innî vehenel-’azmu minnî veşte’aler-ra-su şeybâ</summary>
@@ -221,8 +205,7 @@
         <span class="trans">Rabbim, kemiklerim zayıfladı, saçlarım ağardı</span>
     </details>
 </details></div>
-<br>
-<div>Sorulmamış "Rabbimiz kim?" sorusuna cevap
+<div>"Rabbimiz kim?" sorusunun en basit cevabı
 <details>
     <summary class="verse">innallâhe rabbî verabbukum fa’budûh</summary>
     <details>
@@ -230,8 +213,7 @@
         <span class="trans">Kuşkusuz Allah benim Rabbim, sizin de Rabbinizdir</span>
     </details>
 </details></div>
-<br>
-<div>"Rabbin bir sofra indirebilir mi?" sorusuna cevap
+<div>"Rabbin gökten bir sofra indirebilir mi?"
 <details>
     <summary class="verse">allâhumme rabbenâ enzil ‘aleynâ mâideten mines-semâ</summary>
     <details>
@@ -239,7 +221,6 @@
         <span class="trans">Ey Rabbimiz olan Allah! Bize gökten bir sofra indir </span>
     </details>
 </details></div>
-<br>
 <div>Mağarada iki kişi, biri diğerini teskin ediyor
 <details>
     <summary class="verse">lâ tahzen innallâhe ma’anâ</summary>
@@ -249,8 +230,7 @@
         <span class="trans">Üzülme, şüphesiz ki Allah bizimledir</span>
     </details>
 </details></div>
-<br>
-<div>Henüz söylenmemiş bir söz &ndash; kıyamet gününde göreceğiz
+<div>Kıyamet gününde söylenecek bir söz
 <details>
     <summary class="verse">in tu’ażżibhum fe-innehum ‘ibâduk</summary>
     <details>
@@ -258,9 +238,12 @@
         <span class="trans">Onlara azap edersen, şüphesiz onlar senin kullarındır</span>
     </details>
 </details></div>
-<br><br>
-<p>Cuma Dersleri <button class=goBack>◀</button> &emsp;
-    <button onclick="openAll()">Hepsini Aç</button>
+</div><br>
+<p>Hepsini <button onclick="openAll(1)">Aç</button>
+    <button onclick="openAll(0)">Kapat</button>
+<p>
+Cuma Dersleri &emsp;<button class=goBack>◀</button>
+</p>
 
 <!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/Ha3I-TbtfOU" 
   title="YouTube video player" frameborder="0"  allowfullscreen
@@ -269,15 +252,20 @@
 
 <script>
 "use strict";
-function shuffle(data) { //not used
+function shuffle(data) {
   //https://javascript.info/task/shuffle
-  for (let i = data.length - 1; i > 1; i--) {
-    let j = Math.floor(Math.random() * i) + 1;
+  for (let i = data.length - 1; i > 0; i--) {
+    let j = Math.floor(Math.random() * (i + 1));
     [data[i], data[j]] = [data[j], data[i]];
   }
 }
-function openAll() {
-    document.body.querySelectorAll("details").forEach(x=>x.open=1)
+function mixData() {
+    let d = [...main.children]
+    shuffle(d); main.innerHTML = ""
+    for (let x of d) main.append(x)
+}
+function openAll(b) {
+    main.querySelectorAll("details").forEach(x=>x.open=b)
 }
 </script>
 
